mirrored add subclass spells to mobile renamed updateBook, it was missed in the last pass through fixed mobile.html function call onload() renamed variables and functions on mobile

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -420,6 +420,10 @@ body {
     font-size: 200%;
 }
 
+.add_subs_text {
+    font-size: 175%;
+}
+
 
 .column_container {
     display: flex;
